# Act3SpeedrunTool

./: README.md
Act3SpeedrunTool/: App.rc  CMakeLists.txt  DescriptionDialog.ui  DisplayInfoDialog.cpp  DisplayInfoDialog.h  DisplayInfoDialog.ui  DisplayInfoSubFunction.cpp  DisplayInfoSubFunction.h  FirewallUtil.cpp  FirewallUtil.h  GlobalData.cpp  GlobalData.h  HttpServerUtil.cpp  HttpServerUtil.h  LanguageUtil.cpp  LanguageUtil.h  LogUtil.cpp  LogUtil.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MemoryUtil.cpp  MemoryUtil.h  SettingDialog.cpp  SettingDialog.h  SettingDialog.ui  SubFunction.cpp  SubFunction.h  TimeUtil.cpp  TimeUtil.h  UpdateDialog.cpp  UpdateDialog.h  en.ts  main.cpp  resource.qrc
Act3SpeedrunTool/html/: DisplayInfo.html  DisplayInfo.js
Act3SpeedrunTool/lib/: Ole32.Lib
Act3SpeedrunTool/resource/: DisplayInfo.html  DisplayInfo.js
AutoFirewall/: App.rc  CMakeLists.txt  FirewallUtil.cpp  GlobalData.cpp  GlobalData.h  LanguageUtil.cpp  LogUtil.cpp  LogUtil.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingDialog.cpp  SettingDialog.h  SettingDialog.ui  main.cpp
AutoFirewall/lib/: OleAut32.Lib
doc/README/: README-zh-rCN.md
